added realtime updates and styling

--- a/stocktweets-client/src/scss/base/_global.scss
+++ b/stocktweets-client/src/scss/base/_global.scss
@@ -21,6 +21,16 @@ ul {
   list-style: none;
 }
 
+label {
+  font-weight: 700;
+  font-size: 1.2em;
+}
+
 .Stocks {
   margin: 50px;
+}
+
+.Stock__heading-sub {
+  font-size: .8em;
+  font-style: italic;
 }
