--- a/stocktweets-client/src/scss/components/_stocktweets.scss
+++ b/stocktweets-client/src/scss/components/_stocktweets.scss
@@ -3,43 +3,50 @@
   flex-direction: column;
 }
 
-.Stock_tweets-tweet {
+.Stocks__tweets-tweet {
   display: block;
   border: 1px solid $black;
+  border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
+  background-color: $white;
 }
 
 
 @media (min-width: 500px) {
-  .Stock_tweets-tweet {
+  .Stocks__tweets-tweet {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 75px 2fr 1fr;
     grid-template-rows: 1fr 1fr;
+    row-gap: 5px;
   }
 
-  .Stock_tweets-avatar {
+  .Stocks__tweets-avatar {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
+    place-self: center;
+    margin-right: 10px;
   }
 
-  .Stock_tweets-name {
+  .Stocks__tweets-name {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
   }
 
-  .Stock_tweets-username {
+  .Stocks__tweets-username {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
 
-  .Stock_tweets-created {
+  .Stocks__tweets-created {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+    place-self: end;
   }
 
-  .Stock_tweets-message {
-    grid-column: 1 / 4;
+  .Stocks__tweets-message {
+    grid-column: 2 / 4;
     grid-row: 3 / 4;
+    margin-top: 10px;
   }
 }
