--- a/stocktweets-client/src/scss/components/_search.scss
+++ b/stocktweets-client/src/scss/components/_search.scss
@@ -1,15 +1,24 @@
 .Stocks__search {
-  margin-bottom: 20px;
   border: 1px solid $black;
+  border-radius: 5px;;
   padding: 20px;
   background-color: $gray-medium-bg;
+  margin: 10px;
 }
 
 .Stocks__search-form input {
   display: inline-block;
   margin-bottom: 5px;
+  padding: 10px;
+  border-radius: 5px;
+  vertical-align: middle;
 }
 
 .Stocks__search-form button {
   margin-left: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  &:hover {
+    border-color: #0000d8;
+  }
 }
