--- a/stocktweets-client/src/scss/components/_stocktickers.scss
+++ b/stocktweets-client/src/scss/components/_stocktickers.scss
@@ -1,35 +1,42 @@
-.Stocks__tickers {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 50px;
-}
-
-.Stocks__tickers-symbols,
-.Stocks__tickers-counts {
-  border: 1px solid $black;
-  padding: 20px;
-  background-color: $gray-dark-bg;
-}
-
-.Stocks__tickers-heading {
-  font-weight: 700;
-  font-size: 1.2em;
-}
-
-.Stocks__tickers-stock {
+.Stocks__tickers-counts button {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 2px;
   padding: 10px;
   margin: 10px;
-  display: inline-block;
+
+  .Stocks__tickers-counts-symbol {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    text-align: left;
+    font-weight: 700;
+    font-size: 1.2em;
+  }
+  .Stocks__tickers-counts-title {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    text-align: left;
+  }
+  .Stocks__tickers-counts-count {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    place-self: center;
+  }
+  .Stocks__tickers-counts-img {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+    place-self: center;
+  }
+  &:hover {
+    border-color: #ff3333;
+    fill: #ff3333;
+  }
 }
 
-.Stocks__tickers-counts_header {
-  font-weight: 700;
-  font-size: 1.2em;
-  margin-bottom: 10px;
-}
-
-.Stocks__tickers-counts_data span {
-  font-weight: 600;
+@media (min-width: 540px) {
+  .Stocks__tickers-counts button {
+    column-gap: 50px;
+  }
 }
