--- a/stocktweets-client/src/scss/components/_stocktweets.scss
+++ b/stocktweets-client/src/scss/components/_stocktweets.scss
@@ -1,6 +1,7 @@
 .Stocks__tweets {
   display: flex;
   flex-direction: column;
+  margin: 10px;
 }
 
 .Stocks__tweets-tweet {
@@ -9,9 +10,19 @@
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
-  background-color: $white;
+  background-color: $gray-medium-bg;
 }
 
+.Stocks__tweets-avatar img {
+  border-radius: 50%;
+  width: 100%;
+  height: auto;
+}
+
+.Stocks__tweets-name {
+  font-weight: 600;
+  font-size: 1.1em;
+}
 
 @media (min-width: 500px) {
   .Stocks__tweets-tweet {
@@ -24,7 +35,7 @@
   .Stocks__tweets-avatar {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
-    place-self: center;
+    place-self: top;
     margin-right: 10px;
   }
 
