styling changes and error checking added

--- a/stocktweets-client/src/scss/base/_colors.scss
+++ b/stocktweets-client/src/scss/base/_colors.scss
@@ -1,10 +1,9 @@
 $white: #fff;
-$gray-eighty: #ccc;
 $gray-light: #999;
 $gray-medium: #666;
 $gray-dark: #333;
 $black: #000;
 $red: #e23d3d;
-$gray-light-bg: #f5f5f5;
 $gray-medium-bg: #f1f1f1;
-$gray-dark-bg: #dddddd;
+$blue: #218dff;
+$blue-light: rgba(33, 141, 255, 0.5);
