--- a/stocktweets-client/assets/css/style.css
+++ b/stocktweets-client/assets/css/style.css
@@ -32,13 +32,18 @@ a {
   color: #000;
 }
 
+.strong {
+  font-weight: 600;
+}
+
 .Stocks {
   min-width: 320px;
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .Stocks__heading h1 {
   font-size: 1.6em;
+  margin-left: 10px;
 }
 
 .Stocks__heading-sub {
@@ -71,9 +76,66 @@ a {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 700px) {
   .Stocks {
-    margin: 50px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2fr;
+        grid-template-columns: 1fr 2fr;
+    border: 1px solid #000;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    row-gap: 5px;
+  }
+  .Stocks .Stocks__heading {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .Stocks .Stocks__search {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    -ms-grid-column-align: stretch;
+        justify-self: stretch;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  .Stocks .Stocks__tickers {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    -ms-grid-column-align: stretch;
+        justify-self: stretch;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  .Stocks .Stocks__tweets {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 3;
+    grid-row: 2 / 5;
+    -ms-grid-column-align: stretch;
+        justify-self: stretch;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
   }
 }
 
@@ -100,14 +162,14 @@ a {
 }
 
 .Stocks__search-form button:hover {
-  border-color: #0000d8;
+  border-color: #218dff;
 }
 
-.Stocks__tickers-counts button {
+.Stocks__tickers-counts {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 2fr 1fr;
-      grid-template-columns: 2fr 2fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   -webkit-column-gap: 10px;
@@ -115,9 +177,12 @@ a {
   row-gap: 2px;
   padding: 10px;
   margin: 10px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background-color: #f1f1f1;
 }
 
-.Stocks__tickers-counts button .Stocks__tickers-counts-symbol {
+.Stocks__tickers-counts .Stocks__tickers-counts-symbol {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -126,10 +191,9 @@ a {
   grid-row: 1 / 2;
   text-align: left;
   font-weight: 700;
-  font-size: 1.2em;
 }
 
-.Stocks__tickers-counts button .Stocks__tickers-counts-title {
+.Stocks__tickers-counts .Stocks__tickers-counts-title {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -139,67 +203,104 @@ a {
   text-align: left;
 }
 
-.Stocks__tickers-counts button .Stocks__tickers-counts-count {
+.Stocks__tickers-counts .Stocks__tickers-counts-count {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.Stocks__tickers-counts .Stocks__tickers-counts-button {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
   -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / 3;
-  place-self: center;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
-.Stocks__tickers-counts button .Stocks__tickers-counts-img {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3 / 4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / 3;
-  place-self: center;
-}
-
-.Stocks__tickers-counts button:hover {
-  border-color: #ff3333;
-  fill: #ff3333;
+.Stocks__tickers-counts:hover {
+  border: 2px solid #e23d3d;
 }
 
 @media (min-width: 540px) {
-  .Stocks__tickers-counts button {
+  .Stocks__tickers-counts {
     -webkit-column-gap: 50px;
             column-gap: 50px;
   }
 }
 
-.Stocks__tweets {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin: 10px;
-}
-
 .Stocks__tweets-tweet {
-  display: block;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 55px 1fr 1fr 3fr;
+      grid-template-rows: 55px 1fr 1fr 3fr;
   border: 1px solid #000;
+  margin: 10px;
+  padding: 5px;
   border-radius: 5px;
-  padding: 10px;
-  margin: 10px 0;
+  row-gap: 5px;
   background-color: #f1f1f1;
 }
 
-.Stocks__tweets-avatar img {
-  border-radius: 50%;
-  width: 100%;
-  height: auto;
+.Stocks__tweets-avatar {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column-align: start;
+      justify-self: start;
 }
 
 .Stocks__tweets-name {
-  font-weight: 600;
-  font-size: 1.1em;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  color: #218dff;
+}
+
+.Stocks__tweets-username {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  color: #218dff;
+}
+
+.Stocks__tweets-created {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.Stocks__tweets-message {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4 / 5;
+  font-style: italic;
 }
 
 @media (min-width: 500px) {
@@ -211,6 +312,7 @@ a {
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     row-gap: 5px;
+    padding: 10px;
   }
   .Stocks__tweets-avatar {
     -ms-grid-column: 1;
