--- a/stocktweets-client/src/scss/components/_stocktickers.scss
+++ b/stocktweets-client/src/scss/components/_stocktickers.scss
@@ -1,18 +1,20 @@
-.Stocks__tickers-counts button {
+.Stocks__tickers-counts {
   display: grid;
-  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   column-gap: 10px;
   row-gap: 2px;
   padding: 10px;
   margin: 10px;
+  border: 1px solid $black;
+  border-radius: 5px;
+  background-color: $blue-light;
 
   .Stocks__tickers-counts-symbol {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     text-align: left;
     font-weight: 700;
-    font-size: 1.2em;
   }
   .Stocks__tickers-counts-title {
     grid-column: 1 / 2;
@@ -21,22 +23,21 @@
   }
   .Stocks__tickers-counts-count {
     grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    place-self: center;
+    grid-row: 2 / 3;
+    justify-self: end;
   }
-  .Stocks__tickers-counts-img {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
-    place-self: center;
+  .Stocks__tickers-counts-button {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    justify-self: end;
   }
   &:hover {
-    border-color: #ff3333;
-    fill: #ff3333;
+    border: 2px solid $red;
   }
 }
 
 @media (min-width: 540px) {
-  .Stocks__tickers-counts button {
+  .Stocks__tickers-counts {
     column-gap: 50px;
   }
 }
