--- a/stocktweets-client/src/scss/components/_stocktweets.scss
+++ b/stocktweets-client/src/scss/components/_stocktweets.scss
@@ -1,27 +1,43 @@
-.Stocks__tweets {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-}
-
 .Stocks__tweets-tweet {
-  display: block;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 55px 1fr 1fr 3fr;
   border: 1px solid $black;
+  margin: 10px;
+  padding: 5px;
   border-radius: 5px;
-  padding: 10px;
-  margin: 10px 0;
+  row-gap: 5px;
   background-color: $gray-medium-bg;
 }
 
-.Stocks__tweets-avatar img {
-  border-radius: 50%;
-  width: 100%;
-  height: auto;
+.Stocks__tweets-avatar {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  justify-self: start;
 }
 
 .Stocks__tweets-name {
-  font-weight: 600;
-  font-size: 1.1em;
+  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+  color: $blue;
+}
+
+.Stocks__tweets-username {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+  color: $blue
+}
+
+.Stocks__tweets-created {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  justify-self: end;
+}
+
+.Stocks__tweets-message {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+  font-style: italic;
 }
 
 @media (min-width: 500px) {
@@ -30,6 +46,7 @@
     grid-template-columns: 75px 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     row-gap: 5px;
+    padding: 10px;
   }
 
   .Stocks__tweets-avatar {
