--- a/stocktweets-client/src/scss/components/_stocktweets.scss
+++ b/stocktweets-client/src/scss/components/_stocktweets.scss
@@ -32,6 +32,12 @@
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   justify-self: end;
+  border: 1px solid $blue-light;
+  border-radius: 10px;
+  background-color: $blue-light;
+  padding: 5px 10px;
+  font-size: .9em;
+  height: 2.2em;
 }
 
 .Stocks__tweets-message {
